--- a/products.html
+++ b/products.html
@@ -25,29 +25,33 @@
             <h1>decór</h1>
             <img src="./images/flower color 1.png">
         </div>
-        <h2 class="heading-style">Products</h2>
-        <p class="sub-heading">Here you can find anything you need to make your living space truly your own.</p>
+        <div class="product-header">
+            <div class="product-header_text">
+                <h2 class="heading-style">Products</h2>
+                <p class="sub-heading">Here you can find anything you need to make your living space truly your own.</p>
+            </div>
+        </div>
         <div class="product-container">
             <div class="product">
                 <div class="product-details">
-                    <h3>Product name</h3>
+                    <h3>Lantern</h3>
                     <p>Product description</p>
                 </div>
-                <img src="images/Placeholder.png">
+                <img src="images/product-1_img-1-blue.jpg">
             </div>
             <div class="product">
                 <div class="product-details">
-                    <h3>Product name</h3>
+                    <h3>Tea Light Holder</h3>
                     <p>Product description</p>
                 </div>
-                <img src="images/Placeholder.png">
+                <img src="images/product-2_img-1-blue.jpg">
             </div>
             <div class="product">
                 <div class="product-details">
-                    <h3>Product name</h3>
+                    <h3>SMEG Toaster</h3>
                     <p>Product description</p>
                 </div>
-                <img src="images/Placeholder.png">
+                <img src="images/product-3_img-1-blue.jpg">
             </div>
     </main>
     <footer>
