--- a/products.html
+++ b/products.html
@@ -20,38 +20,63 @@
         <a href="#">About Us</a>
     </nav>
     <main>
+
         <div class="logo">
             <img src="./images/flower color 1.png">
             <h1>decór</h1>
             <img src="./images/flower color 1.png">
         </div>
+
         <div class="product-header">
+            <img src="/images/product-2_img-2.jpg">
             <div class="product-header_text">
                 <h2 class="heading-style">Products</h2>
                 <p class="sub-heading">Here you can find anything you need to make your living space truly your own.</p>
             </div>
         </div>
+
         <div class="product-container">
             <div class="product">
                 <div class="product-details">
                     <h3>Lantern</h3>
-                    <p>Product description</p>
+                    <p class="product-price">£8</p>
+                    <p>This burgundy lantern is a small, elegant holder for one tea light, creating a cozy
+                        ambiance.</p>
+                    <div class="product-buttons">
+                        <button class="btn-purchase"><img src="/images/decor-icon-large-cart.png"></button>
+                        <button class="btn-wishlist"><img src="/images/decor-icon-heart.png"></button>
+                    </div>
                 </div>
-                <img src="images/product-1_img-1-blue.jpg">
+                <img src="images/product-1_img-1-sq.jpg">
             </div>
+
             <div class="product">
                 <div class="product-details">
                     <h3>Tea Light Holder</h3>
-                    <p>Product description</p>
+                    <p class="product-price">£3</p>
+                    <p>This glass tea light holder features a diamond pattern, adding glamour and warmth to any
+                        space.
+                    </p>
+                    <div class="product-buttons">
+                        <button class="btn-purchase"><img src="/images/decor-icon-large-cart.png"></button>
+                        <button class="btn-wishlist"><img src="/images/decor-icon-heart.png"></button>
+                    </div>
                 </div>
-                <img src="images/product-2_img-1-blue.jpg">
+                <img src="images/product-2_img-1-sq.jpg">
             </div>
+
             <div class="product">
                 <div class="product-details">
-                    <h3>SMEG Toaster</h3>
-                    <p>Product description</p>
+                    <h3>Toaster</h3>
+                    <p class="product-price">£24</p>
+                    <p>This white toaster brings a vintage charm to the kitchen while efficiently toasting bread.
+                    </p>
+                    <div class="product-buttons">
+                        <button class="btn-purchase"><img src="/images/decor-icon-large-cart.png"></button>
+                        <button class="btn-wishlist"><img src="/images/decor-icon-heart.png"></button>
+                    </div>
                 </div>
-                <img src="images/product-3_img-1-blue.jpg">
+                <img src="images/product-3_img-1-sq.jpg">
             </div>
     </main>
     <footer>
