--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
             <p>
                 Mauris molestie, mauris sed euismod tempus, felis leo scelerisque velit.
             </p>
-            <button class="cta">Learn More</button>
+            <a href="products.html" class="products-link">Products</a>
         </div>
 
         <hr />
 
         <div class="categories">
             <div class="category cat-1">
-                <h3>Category</h3>
+                <h3>Lounge</h3>
                 <p>
                     Curabitur quis nisl molestie, dignissim libero
                     et, maximus nulla. Sed auctor interdum laoreet.
                 </p>
             </div>
             <div class="category cat-2">
-                <h3>Category</h3>
+                <h3>Bedroom</h3>
                 <p>
                     Curabitur quis nisl molestie, dignissim libero
                     et, maximus nulla. Sed auctor interdum laoreet.
                 </p>
             </div>
             <div class="category cat-3">
-                <h3>Category</h3>
+                <h3>Kitchen</h3>
                 <p>
                     Curabitur quis nisl molestie, dignissim libero
                     et, maximus nulla. Sed auctor interdum laoreet.
