--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Home Decor</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;300;400;500&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
 </head>
 
 <body>
@@ -40,36 +40,41 @@
             <p>
                 Mauris molestie, mauris sed euismod tempus, felis leo scelerisque velit.
             </p>
-            <a href="products.html" class="products-link">Products</a>
+            <a href="products.html" class="products-link cta-button">Products</a>
         </div>
 
-        <hr />
+        <div class="categories-container">
 
-        <div class="categories">
-            <div class="category cat-1">
-                <h3>Lounge</h3>
-                <p>
-                    Curabitur quis nisl molestie, dignissim libero
-                    et, maximus nulla. Sed auctor interdum laoreet.
-                </p>
+            <hr />
+
+            <div class="categories">
+                <div class="category cat-1">
+                    <h3>Lounge</h3>
+                    <p>
+                        Curabitur quis nisl molestie, dignissim libero
+                        et, maximus nulla. Sed auctor interdum laoreet.
+                    </p>
+                </div>
+                <div class="category cat-2">
+                    <h3>Bedroom</h3>
+                    <p>
+                        Curabitur quis nisl molestie, dignissim libero
+                        et, maximus nulla. Sed auctor interdum laoreet.
+                    </p>
+                </div>
+                <div class="category cat-3">
+                    <h3>Kitchen</h3>
+                    <p>
+                        Curabitur quis nisl molestie, dignissim libero
+                        et, maximus nulla. Sed auctor interdum laoreet.
+                    </p>
+                </div>
             </div>
-            <div class="category cat-2">
-                <h3>Bedroom</h3>
-                <p>
-                    Curabitur quis nisl molestie, dignissim libero
-                    et, maximus nulla. Sed auctor interdum laoreet.
-                </p>
-            </div>
-            <div class="category cat-3">
-                <h3>Kitchen</h3>
-                <p>
-                    Curabitur quis nisl molestie, dignissim libero
-                    et, maximus nulla. Sed auctor interdum laoreet.
-                </p>
-            </div>
+
+            <hr />
+
         </div>
 
-        <hr />
 
     </main>
     <footer>
