--- a/products.html
+++ b/products.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products | Home Decor</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;300;400;500&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
 </head>
 
 <body>
@@ -28,10 +28,13 @@
         </div>
 
         <div class="product-header">
-            <img src="/images/product-2_img-2.jpg">
             <div class="product-header_text">
-                <h2 class="heading-style">Products</h2>
-                <p class="sub-heading">Here you can find anything you need to make your living space truly your own.</p>
+                <h2>Products</h2>
+                <p class="sub-heading">Here you can find anything you need to make your living space truly your own.
+                </p>
+            </div>
+            <div class="product-header_img">
+                <img src="/images/product-2_img-2.jpg" alt="Products header image">
             </div>
         </div>
 
@@ -78,6 +81,7 @@
                 </div>
                 <img src="images/product-3_img-1-sq.jpg">
             </div>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 decór</p>
