--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
         <div class="product-header">
             <div class="product-header_text">
                 <h2>Products</h2>
-                <p class="sub-heading">Here you can find anything you need to make your living space truly your own.
+                <p class="sub-heading">Here you can find everything you need to make your living space truly your own.
                 </p>
             </div>
             <div class="product-header_img">
