--- a/products.html
+++ b/products.html
@@ -14,22 +14,26 @@
 </head>
 
 <body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="products.html">Products</a>
-        <a href="#">About Us</a>
-    </nav>
-    <main>
-
+    <header>
         <div class="logo">
-            <img src="./images/flower color 1.png">
-            <h1>decór</h1>
-            <img src="./images/flower color 1.png">
+            <a href="index.html">
+                <img src="./images/flower color 1.png">
+                <p>decór</p>
+                <img src="./images/flower color 1.png">
+            </a>
         </div>
+        <nav class="nav-test">
+            <a href="/">Home</a>
+            <a href="products.html">Products</a>
+            <a href="#">About Us</a>
+        </nav>
+    </header>
+
+    <main>
 
         <div class="product-header">
             <div class="product-header_text">
-                <h2>Products</h2>
+                <h1>Products</h1>
                 <p class="sub-heading">Here you can find everything you need to make your living space truly your own.
                 </p>
             </div>
