--- a/index.html
+++ b/index.html
@@ -14,32 +14,42 @@
 </head>
 
 <body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="products.html">Products</a>
-        <a href="#">About Us</a>
-    </nav>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="./images/flower color 1.png">
+                <p>decór</p>
+                <img src="./images/flower color 1.png">
+            </a>
+        </div>
+        <nav class="nav-test">
+            <a href="/">Home</a>
+            <a href="products.html">Products</a>
+            <a href="#">About Us</a>
+        </nav>
+    </header>
+
     <main>
 
-        <div class="logo">
-            <img src="./images/flower color 1.png">
-            <h1>decór</h1>
-            <img src="./images/flower color 1.png">
-        </div>
-
-        <div class="text-content">
-            <h2>Welcome to <span class="heading-style">decór</span></h2>
-            <p>
-                Nulla facilisi. Nulla vehicula velit id justo elementum tristique. Aliquam in est ut purus tincidunt
-                laoreet
-                tristique ut nisi. Nunc bibendum, magna sit amet dapibus ultricies, lacus sem venenatis augue, vel
-                consectetur felis nulla vel sapien. Donec et tristique nunc. Curabitur quis nisl molestie, dignissim
-                libero
-                et, maximus nulla. Sed auctor interdum laoreet.
-            </p>
-            <p>
-                Mauris molestie, mauris sed euismod tempus, felis leo scelerisque velit.
-            </p>
+        <div class="text-container">
+            <h1>Welcome to <span class="heading-style">decór</span></h1>
+            <div class="text-content">
+                <h2>Unveiling the Art of Serene Living</h2>
+                <p>
+                    Welcome to Decór, your one-stop shop for elevating your home's ambiance. Explore our handpicked
+                    selection of exquisite lounge, bedroom, and kitchen decor products. With carefully curated pieces,
+                    we're
+                    here to help you transform your living spaces into stylish sanctuaries. Discover the perfect blend
+                    of
+                    comfort and aesthetics, and bring your interior design dreams to life with Decór.
+                </p>
+            </div>
+            <div class="quote">
+                <blockquote>
+                    <q>The best way to turn a house into a home is to fill it with love and laughter.</q>
+                </blockquote>
+                <cite>- William J. Bennett</cite>
+            </div>
             <a href="products.html" class="products-link cta-button">Products</a>
         </div>
 
@@ -51,22 +61,19 @@
                 <div class="category cat-1">
                     <h3>Lounge</h3>
                     <p>
-                        Curabitur quis nisl molestie, dignissim libero
-                        et, maximus nulla. Sed auctor interdum laoreet.
+                        Elevate relaxation with stylish lounge decor that balances comfort and aesthetics.
                     </p>
                 </div>
                 <div class="category cat-2">
                     <h3>Bedroom</h3>
                     <p>
-                        Curabitur quis nisl molestie, dignissim libero
-                        et, maximus nulla. Sed auctor interdum laoreet.
+                        Discover serene bedroom decor, blending aesthetics and tranquility for ultimate relaxation.
                     </p>
                 </div>
                 <div class="category cat-3">
                     <h3>Kitchen</h3>
                     <p>
-                        Curabitur quis nisl molestie, dignissim libero
-                        et, maximus nulla. Sed auctor interdum laoreet.
+                        Functional elegance defines our kitchen decor, fusing style with practicality seamlessly.
                     </p>
                 </div>
             </div>
