--- a/index.html
+++ b/index.html
@@ -22,17 +22,24 @@
                 <img src="./images/flower color 1.png">
             </a>
         </div>
-        <nav class="nav-test">
-            <a href="/">Home</a>
-            <a href="products.html">Products</a>
-            <a href="#">About Us</a>
-        </nav>
+        <div>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">&#9776</label>
+            <nav class="menu">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
 
         <div class="text-container">
             <h1>Welcome to <span class="heading-style">decór</span></h1>
+
             <div class="text-content">
                 <h2>Unveiling the Art of Serene Living</h2>
                 <p>
@@ -44,13 +51,24 @@
                     comfort and aesthetics, and bring your interior design dreams to life with Decór.
                 </p>
             </div>
-            <div class="quote">
-                <blockquote>
-                    <q>The best way to turn a house into a home is to fill it with love and laughter.</q>
-                </blockquote>
-                <cite>- William J. Bennett</cite>
+
+            <div class="products-info">
+                <div class="products-info_text">
+                    <h3>Our Products</h3>
+                    <p>
+                        Decór houses carefully curated home decor products that embody elegance and practicality. From
+                        lounge furnishings that redefine comfort to bedroom essentials that evoke serenity, our
+                        collection
+                        harmonizes style and function. Elevate your kitchen with our chic accents. Discover pieces that
+                        reflect your individuality, creating a space that's both beautiful and functional.
+                    </p>
+                </div>
+                <div class="products-info_btn">
+                    <p>Browse our products here:</p>
+                    <a href="products.html" class="products-link cta-button">Products</a>
+                </div>
             </div>
-            <a href="products.html" class="products-link cta-button">Products</a>
+
         </div>
 
         <div class="categories-container">
@@ -59,19 +77,19 @@
 
             <div class="categories">
                 <div class="category cat-1">
-                    <h3>Lounge</h3>
+                    <h4>Lounge</h4>
                     <p>
                         Elevate relaxation with stylish lounge decor that balances comfort and aesthetics.
                     </p>
                 </div>
                 <div class="category cat-2">
-                    <h3>Bedroom</h3>
+                    <h4>Bedroom</h4>
                     <p>
                         Discover serene bedroom decor, blending aesthetics and tranquility for ultimate relaxation.
                     </p>
                 </div>
                 <div class="category cat-3">
-                    <h3>Kitchen</h3>
+                    <h4>Kitchen</h4>
                     <p>
                         Functional elegance defines our kitchen decor, fusing style with practicality seamlessly.
                     </p>
@@ -82,6 +100,12 @@
 
         </div>
 
+        <div class="quote">
+            <blockquote>
+                <q>The best way to turn a house into a home is to fill it with love and laughter.</q>
+            </blockquote>
+            <cite>- William J. Bennett</cite>
+        </div>
 
     </main>
     <footer>
