--- a/products.html
+++ b/products.html
@@ -22,11 +22,17 @@
                 <img src="./images/flower color 1.png">
             </a>
         </div>
-        <nav class="nav-test">
-            <a href="/">Home</a>
-            <a href="products.html">Products</a>
-            <a href="#">About Us</a>
-        </nav>
+        <div>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">&#9776</label>
+            <nav class="menu">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
